--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "path": "^0.12.7",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
