--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/genai": "^0.12.0",
     "@tailwindcss/cli": "^4.1.5",
+    "@vercel/analytics": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
